Adicionado css para a responsividade

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,12 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+
 }
 
 .div1 {
     background-color: #000;
-    height: 200px;
+    padding: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -68,13 +69,12 @@ h2 {
     margin-bottom: 50px;
 }
 
-.biografia h3 {
+h3 {
     font-size: 50px;
 }
 
-.biografia p {
+p {
     font-size: 16px;
-    line-height: 25px;
     font-weight: 300;
 }
 
@@ -95,4 +95,58 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+@media (max-width: 1024px) {
+    .citacao {
+        margin-left: 66px;
+    }
+}
+
+@media screen and (max-width: 430px) {
+
+    .div2 {
+        height: auto;
+    }
+
+    .div2 img {
+        height: auto;
+        max-width: 40%;
+    }
+
+    .citacao {
+        margin-left: 20px;
+        font-size: 15px;
+        line-height: 20px;
+    }
+
+    .div3 {
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 20px;
+    }
+
+    .biografia {
+        margin-top: 0;
+        margin-bottom: 30px;
+    }
+
+    h3 {
+        font-size: 30px;
+        margin-bottom: 15px;
+    }
+
+    p {
+        
+        font-size: 16px;
+    }
+
+    .creditos {
+        padding: 25px;
+    }
+
+    .creditos p {
+        font-size: 15px;
+    }
+
 }
